# cmake_templates

./: Readme.md
boost.python_proj/: CMakeLists.txt  Readme.md
boost.python_proj/src/: CMakeLists.txt  __init__.py
c_cpp_proj/: CMakeLists.txt  Readme.md
c_cpp_proj/src/: CMakeLists.txt
